@@ -1068,6 +1068,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Mitsubishi CP9550D/DW    (EXPERIMENTAL)
        Mitsubishi CPD70D/DW     (EXPERIMENTAL)
        Mitsubishi CPD707D/DW    (EXPERIMENTAL)
+       Mitsubishi CPS60DW       (EXPERIMENTAL)
 
 	None of these models have been tested and confirmed to work 
 	(or not), so feedback is welcome.
